--- a/VRChat/33/1263833.html
+++ b/VRChat/33/1263833.html
@@ -30,7 +30,7 @@
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1263833">
     <meta name="robots" content="max-image-preview:large">
-    <meta name="ga:shop" content="UA-4867980-2">
+    <meta name="ga:shop" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -80,9 +80,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "jflBmMmVxFXreMO1Q5t7lauO0IY8Gj44JStAZ92gcEw="></script>
+    "vmkTXf8hAnXXLSdu9sXcLENh9SpisFkvE5rFY9JPMkg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"八重桜のコサージュとブローチ Sakura corsage and brooch","description":"3Dモデルアクセサリー「八重桜のコサージュ」Sakura corsage\n\nコサージュ：1027ポリゴン\nブローチ：947ポリゴン\nシェーダー：UnlitWF\n\nカラーごとにprefab 対応\n\n\n洋服や帽子につけたり、髪飾りにしたりして\n自由に楽しんでくださいね！\n\n\n「コサージュのnatural」のみお試し版で無料です！\nアイテム設置の練習などにもお使いください。\n\n\n＜アップデート＞\n2022.02.22　シェーダーをUnlitWFに変更しました。\n2020.04.30　テクスチャ改変用にAlpha抜きPNGを追加しました。\n2019.11.19　全部パックにブローチを追加しました。\n2019.09.02　全部のバリエーションにClipping Maskを対応しました。以前のものと比べて少しアウトラインが入りますが、暗いところなどでの表示が綺麗になると思います。\n2019.08.13　Blackのテクスチャを修正・追加しました。それぞれのバリエーションごとにPrefabを作りました。","url":"https://booth.pm/ja/items/1263833","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/1263833/d6580cac-ef6c-4c81-ab68-c4a4f0d10079_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jflBmMmVxFXreMO1Q5t7lauO0IY8Gj44JStAZ92gcEw="></script>
+    nonce="vmkTXf8hAnXXLSdu9sXcLENh9SpisFkvE5rFY9JPMkg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -107,16 +107,11 @@
         <div class="recaptcha-tag" data-action=
         "booth/checkout_order" data-site-key=
         "6LfF1dcZAAAAAOHQX8v16MX5SktDwmQINVD_6mBF"></div>
-        <div class="market" data-ga-tracking-id="UA-4867980-2"
+        <div class="market" data-ga-tracking-id=""
         data-product-brand="chimaya" data-product-category="209"
         data-product-id="1263833" data-product-list="market_show"
-        data-product-price="500"
-        data-shop-tracking-product-category=
-        "3D Character Attachments" data-shop-tracking-product-id=
-        "1263833" data-shop-tracking-product-name=
-        "八重桜のコサージュとブローチ Sakura ..."
-        data-shop-tracking-product-price="500" data-tracking=
-        "detail_item" id="items">
+        data-product-price="500" data-tracking="detail_item" id=
+        "items">
           <div class="market"></div>
           <div data-page-type="market" id="js-item"></div>
           <article>
@@ -315,18 +310,12 @@
                                         "chimaya"
                                         data-product-category="209"
                                         data-product-variant=
-                                        "2268264"
-                                        data-shop-tracking-product-id="1263833"
-                                        data-shop-tracking-product-name="八重桜のコサージュとブローチ Sakura ..."
-                                        data-shop-tracking-product-price="500"
-                                        data-shop-tracking-product-category="3D Character Attachments"
-                                        data-shop-tracking-product-variant="全部パック"
-                                        data-tracking="add_item"
+                                        "2268264" data-tracking=
+                                        "add_item"
                                         data-product-list=
                                         "from market_show via market as gift to add_item"
-                                        data-ga-tracking-id=
-                                        "UA-4867980-2" type=
-                                        "submit"><input type=
+                                        data-ga-tracking-id=""
+                                        type="submit"><input type=
                                         "hidden" name=
                                         "cart_item[variation_id]"
                                         id="cart_item_variation_id"
@@ -348,17 +337,12 @@
                                           data-product-category=
                                           "209"
                                           data-product-variant=
-                                          "2268264"
-                                          data-shop-tracking-product-id="1263833"
-                                          data-shop-tracking-product-name="八重桜のコサージュとブローチ Sakura ..."
-                                          data-shop-tracking-product-price="500"
-                                          data-shop-tracking-product-category="3D Character Attachments"
-                                          data-shop-tracking-product-variant="全部パック"
-                                          data-tracking="add_item"
+                                          "2268264" data-tracking=
+                                          "add_item"
                                           data-product-list=
                                           "from market_show via market as gift to add_item"
-                                          data-ga-tracking-id=
-                                          "UA-4867980-2" type=
+                                          data-ga-tracking-id=""
+                                          type=
                                           "submit">ギフトとして贈る</button>
                                         </div>
                                       </form>
@@ -386,7 +370,7 @@
                           「ギフトとして贈る」とは</a>
                         </h4>
                         <div class="!p-0" data-has-privacy-policy=
-                        "true" id=
+                        "false" id=
                         "js-item-payment-and-shipping-terms"></div>
                       </div>
                     </div>
@@ -782,7 +766,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
